2005-01-12  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.92, Interface version 0.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* atlas-cpp.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-12-23  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/Makefile.am: Remove SmartPtr_Move benchmark from the
	  tests, as its no longer relevant, and does not build.

2004-11-19  Ron Steinke <rsteinke@w-link.net>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h: Made
	  comment parsing properly part of the codec state.

2004-11-04  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/custom_ops.cpp: Correctly set parents of custom
	  wield op to "wield" not "action".

2004-11-04  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects1.cpp: Fix a redundant include.

	* tests/Objects/custom_ops.cpp: Add a test demonstrating the
	  definition of a custom op class.

2004-10-13  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.91.

2004-10-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Element.h: Add operator== for comparing to C
	  strings, to avoid the ambiguity problem.

2004-10-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.h: Add pure virtual copy method to
	  BaseObjectData to help solve the problems which occur
	  when modifying objects using smart pointers.

	* Atlas/Objects/gen_cpp.py: Implement the copy() method in all
	  the generated classes.

	* Atlas/Objects/SmartPtr.h: Add a copy() method to the SmartPtr
	  to ensure everything happens in an efficient and type safe way.

	* Atlas/Objects/common.py, Atlas/Objects/GenerateObjectFactory.py:
	  Update the copyright statements in the generated code.

2004-10-11  Ron Steinke <rsteinke@w-link.net>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h: Fixed a possible
	  blocking read of string escaped characters to check whether
	  data was available between reading the escape and the escaped
	  character.
