@@ -1,12 +1,12 @@
 // This file may be redistributed and modified only under the terms of
 // the GNU Lesser General Public License (See COPYING for details).
-// Copyright (C) 2000 Michael Day
+// Copyright (C) 2005 Alistair Riddoch
 
-#include <Atlas/Bridge.h>
+#include <Atlas/Negotiate.h>
 
 namespace Atlas {
 
-Bridge::~Bridge()
+Negotiate::~Negotiate()
 {
 }
 
